# cpp-start-project-layout

./: .gitignore  README.md  run_unittest.ps1  run_unittest.sh
docker-env/: Dockerfile  build_run_tests.sh
src/: CMakeLists.txt  Dependency1.cpp  Dependency1.hpp  Dependency2.cpp  Dependency2.hpp  IDependency1.hpp  IDependency2.hpp  MainClass.cpp  MainClass.hpp
tests/: CMakeLists.txt
tests/mocks/: MockDependency1.hpp  MockDependency2.hpp
tests/test_main_class/: test_main_class.cpp
